changes to version with version number